@@ -18,6 +18,9 @@ $Source$
       (bug #1397061 Left frame not loaded correct on MySQL error)
     * libraries/common.lib.php, left.php:
       bug #1392924 undefined index: tab_count
+    * libraries/display_export.lib.php, css/phpmyadmin.css.php,
+      themes/*/css/theme_right.css.php:
+      'fixed' layout of export screen for buggy safari and opera
 
 2006-01-12 Marc Delisle  <lem9@users.sourceforge.net>
     * Documentation.html: typo, thanks to Cédric Corazza
